--- a/src/app/components/estratto-conto/estratto-conto.component.html
+++ b/src/app/components/estratto-conto/estratto-conto.component.html
@@ -1,2 +1,2 @@
 <h3>Estratto conto</h3>
-<h4>Saldo contabile: {{ bs.saldo | currency }}</h4>
+<h4 *ngIf="conto">Saldo contabile: {{ conto.saldo | currency }}</h4>
